configure shuttleverse-connect routing